<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.sf.platform.boot</groupId>
		<artifactId>sf-platform-boot-parent</artifactId>
		<version>1.0.0</version>
	</parent>

	<groupId>com.sf.hash</groupId>
	<version>0.0.1-SNAPSHOT</version>
	<artifactId>test</artifactId>
	<packaging>pom</packaging>

	<name>test</name>
	<url>http://10.118.46.12:8080/site/test/</url>

	<properties>
		<!-- Build args -->
		<!--<argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline> -->
		<java.version>1.7</java.version>
		<file_encoding>UTF-8</file_encoding>
		<project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>
		<project.reporting.outputEncoding>${file_encoding}</project.reporting.outputEncoding>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.test.skip>true</maven.test.skip>
		<skip_maven_deploy>false</skip_maven_deploy>

		<!-- url -->
		<issue.jira.url>http://10.0.137.95:8088/secure/Dashboard.jspa</issue.jira.url>
		<ci.url>http://10.118.46.12:8080/jenkins/job/${project.artifactId}</ci.url>
		<scm.source.url>http://10.0.137.95:7990/projects/CO-NIR/repos/</scm.source.url>
		<scm.source.connection>scm:git:http://10.0.137.95:7990/projects/CO-NIR/</scm.source.connection>
		<site.deploy.url>file:/usr/local/apache-tomcat-7.0.54/webapps/site/${project.artifactId}</site.deploy.url>
	</properties>

	<dependencies>
		<!-- log start -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
		</dependency>
		<!-- log end -->

		<!-- for test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>libs-release</name>
			<url>http://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>sf-private-reponsitory</id>
			<name>SF private repository</name>
			<url>http://10.118.46.12:8081/nexus/content/groups/public/</url>
		</repository>
	</repositories>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<!-- Deploy plugin configuration -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<configuration>
					<skip>${skip_maven_deploy}</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<encoding>${file_encoding}</encoding>
				</configuration>
			</plugin>

			<!-- <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<encoding>UTF-8</encoding>
					<compilerArgs>
						<arg>-verbose</arg>
						<arg>-Xlint:unchecked</arg>
						<arg>-Xlint:deprecation</arg>
						<arg>-bootclasspath</arg>
						<arg>${env.JAVA_HOME}/jre/lib/rt.jar</arg>
						<arg>-extdirs</arg>
						<arg>${project.basedir}/src/main/lib</arg>
					</compilerArgs>
				</configuration>
			</plugin> -->
		</plugins>



	</build>

	<profiles>
		<profile>
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<env.devMode>dev</env.devMode>
				<skipAssemblyDEV>false</skipAssemblyDEV>
				<skipAssemblyUAT>true</skipAssemblyUAT>
				<skipAssemblyPROD>true</skipAssemblyPROD>
			</properties>
		</profile>
		<profile>
			<id>uat</id>
			<activation>
			</activation>
			<properties>
				<env.devMode>uat</env.devMode>
				<skipAssemblyDEV>true</skipAssemblyDEV>
				<skipAssemblyUAT>false</skipAssemblyUAT>
				<skipAssemblyPROD>true</skipAssemblyPROD>
			</properties>
		</profile>
		<profile>
			<id>prod</id>
			<activation>
			</activation>
			<properties>
				<env.devMode>prod</env.devMode>
				<skipAssemblyDEV>true</skipAssemblyDEV>
				<skipAssemblyUAT>true</skipAssemblyUAT>
				<skipAssemblyPROD>false</skipAssemblyPROD>
			</properties>
		</profile>
	</profiles>

	<modules>
		<module>test-client</module>
		<module>test-common</module>
		<module>test-dao</module>
		<module>test-manager</module>
		<module>test-service</module>
		<module>test-test</module>
	</modules>
</project>